# A-Shot

./: .gitattributes  .gitignore  .gitmodules  README.md  gradle.properties  local.properties  settings.gradle.kts
.github/: CODEOWNERS
.github/workflows/: CMakeRun.yml  cmake-multi-platform.yml  configure-gradle.yml  notifiy-reviewers.yml
composeApp/: build.gradle.kts
composeApp/schemas/database.ShotDatabase/: 1.json
composeApp/src/core/imagemagick/include/MagickCore/: magick-baseconfig.h  version.h
composeApp/src/core/src/: BlurDetector.hh  ImageLoader.hh  Pipe.hh  PipelineStep.cc
composeApp/src/core/src/jni/: Core.kt  LoadingPipeline.hh  LoadingPipeline.kt
composeApp/src/desktopMain/kotlin/: Main.kt  MainModel.kt  MainState.kt  Theme.kt  core
composeApp/src/desktopMain/kotlin/component/: Burst.kt  ButtonGrid.kt  CullGrid.kt  SelectionBox.kt  Shot.kt
composeApp/src/desktopMain/kotlin/core/: Core.kt  LoadingPipeline.kt
composeApp/src/desktopMain/kotlin/core/checkpoints/: D-DFFNet.ort
composeApp/src/desktopMain/kotlin/core/src/: Pipe.cc  Util.cc  Util.hh
composeApp/src/desktopMain/kotlin/core/src/jni/: LoadingPipeline.cc  jni_core.cc
composeApp/src/desktopMain/kotlin/database/: ShotDao.kt  ShotDatabase.kt  ShotDb.kt
composeApp/src/desktopMain/kotlin/database/converter/: ShotConverters.kt
composeApp/src/desktopMain/kotlin/database/dao/: CategoryDao.kt  FolderDao.kt  ShotDao.kt
composeApp/src/desktopMain/kotlin/database/entity/: Folder.kt  Shot.kt
composeApp/src/desktopMain/kotlin/database/selection/: CategorySizes.kt  FolderWithCount.kt  FolderWithShots.kt  ShotIdEmbedding.kt  ShotIdName.kt
composeApp/src/desktopMain/kotlin/logic/: CullViewModel.kt  NormalViewModel.kt
composeApp/src/desktopMain/kotlin/page/overview/: OverviewPage.kt
composeApp/src/desktopMain/kotlin/page/tailpond/: TailpondPage.kt
composeApp/src/desktopMain/kotlin/screen/cull/: CullScreen.kt  CullViewModel.kt
composeApp/src/desktopMain/kotlin/screen/cull/components/: GroupsList.kt
composeApp/src/desktopMain/kotlin/screen/import_/: ImportModel.kt  ImportScreen.kt  ImportState.kt
composeApp/src/desktopMain/kotlin/screen/import_/component/: Container.kt  Failure.kt  Loading.kt  SelectDir.kt
composeApp/src/desktopMain/kotlin/shot/: Shot.kt  ShotCollection.kt  ShotGroup.kt  Shot_.kt
composeApp/src/desktopMain/kotlin/style/: Font.kt
composeApp/src/desktopMain/kotlin/ui/: Stub.kt
composeApp/src/desktopMain/kotlin/ui/component/: AppContainer.kt  AppNavHost.kt  AppTopBar.kt  Cluster.kt  Folder.kt  ImportFloatingButton.kt  MediaFolder.kt  PhotoCard.kt  SelectionBox.kt  Shot.kt  VirtualFolder.kt
composeApp/src/desktopMain/kotlin/ui/window/: MainWindow.kt  SplashWindow.kt
composeApp/src/desktopMain/kotlin/util/: DBSCAN.kt  ShotCluster.kt
composeApp/src/utils/src/blur_filtering/: main.ipynb
composeApp/src/utils/src/blur_filtering/checkpoints/: D-DFFNet.pth
composeApp/src/utils/src/image_grouping/: dataset.py  extract_onnx.py
core/: CMakeLists.txt  imagemagick.build.sh.in  imagemagick.configure.sh.in  imagemagick.install.sh.in  imagemagick.patch  imagemagick.patch.sh.in  lcms.configure.sh.in  lcms.install.sh.in  onnxruntime.build.sh.in  onnxruntime.install.sh.in  onnxruntime.patch  onnxruntime.patch.sh.in  raw.build.sh.in  raw.configure.sh.in  raw.install.sh.in
core/checkpoints/: CVNet50.required_operators_and_types.config  D-DFFNet.required_operators_and_types.config
core/onnxruntime/include/: onnxruntime_cxx_api.h
core/sqlite/include/: sqlite3.h
core/src/: BlurDetector.cc  BlurDetector.hh  ImageEncoder.cc  ImageEncoder.hh  ImageLoader.cc  ImageLoader.hh  Pipe.hh  PipelineStep.hh  Util.cc  Util.hh  core.cc  core.cpp  core.h  core.hh  main.cc  main.cpp
core/src/jni/: Core.cpp  Core.h  Core.kt  LoadingPipeline.cc  LoadingPipeline.hh  LoadingPipeline.kt  jni_core.cc  jni_core.hh
desktop/: build.gradle.kts  settings.gradle.kts
desktop/A-Shot/: settings.gradle.kts
desktop/A-Shot desktop/: build.gradle.kts
desktop/A-Shot desktop/src/main/kotlin/: ImageProcessing.kt  ToImageBitmap.kt  ViewPage.kt
desktop/A-Shot/src/main/kotlin/: SelectDirectory.kt  SelectPage.kt
desktop/gradle/wrapper/: gradle-wrapper.properties
desktop/src/main/cpp/: Native.c  Native.h
desktop/src/main/kotlin/: ImageProcessing.kt  Main.kt  MainModel.kt  Native.kt  PhotoGroup.kt  StartPage.kt
desktop/src/main/kotlin/component/: Burst.kt  CullGrid.kt  SelectionBox.kt  Shot.kt
desktop/src/main/kotlin/page/: ImageProcessing.kt  SelectPage.kt  StartPage.kt  ViewPage.kt
desktop/src/main/kotlin/page/groups/: GroupsPage.kt
desktop/src/main/kotlin/page/nok/: NokPage.kt
desktop/src/main/kotlin/page/ok/: OkPage.kt
desktop/src/main/kotlin/page/oknok/: OkNokPage.kt
desktop/src/main/kotlin/page/overview/: OverviewPage.kt
desktop/src/main/kotlin/page/tailpond/: TailpondPage.kt
desktop/src/main/kotlin/screen/: ImageProcessing.kt
desktop/src/main/kotlin/screen/cull/: CullScreen.kt  CullState.kt  CullViewModel.kt
desktop/src/main/kotlin/screen/ha/: HA.kt
desktop/src/main/kotlin/screen/import_/: ImportModel.kt  ImportScreen.kt  ImportState.kt
desktop/src/main/kotlin/screen/importing/: ImportModel.kt  ImportScreen.kt  ImportState.kt
desktop/src/main/kotlin/screen/main/: MainScreen.kt  MainState.kt  MainViewModel.kt
desktop/src/main/kotlin/screen/overview/: OverviewScreen.kt
desktop/src/main/kotlin/screen/select/: SelectScreen.kt
desktop/src/main/kotlin/shot/: Shot.kt  ShotCollection.kt  ShotGroup.kt
desktop/src/main/kotlin/style/: Font.kt
desktop/src/main/kotlin/util/: AsyncImage.kt  GeomUtil.kt  ImageLoader.kt
gradle/: libs.versions.toml
lib/: CMakeLists.txt  library.cpp  library.h
utils/src/blur_filtering/: ImageData.py  ddffnet  main.ipynb  onnx_export.ipynb  onnx_run.ipynb
utils/src/blur_filtering/checkpoints/: D-DFFNet.onnx  DFFNet.pth
utils/src/image_grouping/: ModelWrapper.py  dataset.py  datasetV2.py  exctractWrapper.py  extractC.py  testing.py  testing_onnx.py
utils/src/image_grouping/checkpoints/: WrapperONNX.onnx
(+41 files in other folders)
